# gravitycar_dnd1st_rag_system

./: .gitignore  .htaccess.production  README.md  api_proxy.php  main.py  pyproject-production.toml  pyproject.toml  requirements-dev.txt  requirements-production.txt  requirements.txt
.github/: copilot-instructions.md
.github/chatmodes/: coder.chatmode.md  git_commit.chatmode.md  mentor.chatmode.md  planner.chatmode.md
archive/: README_DOCLING.md  chunk_monster_manual_docling.py  embed_and_store_markdown.py  embed_and_store_semantic.py
archive/embedders/: docling_embedder_legacy_20251021.py
docs/: ENV_FILE_MIGRATION.md  commands.md
docs/deployment/: DOCUMENTATION_CLEANUP.md  PHP_PROXY_SETUP.md  PRODUCTION_DEPLOYMENT_GUIDE.md
docs/early_notes/: Filtering.md  PHASE2_GUIDE.md  PHASE3B_PYMUPDF.md  PHASE3_DOCLING_PLAN.md  PHASE3_QUICK_REF.md  START_HERE_PHASE3.md  SUMMARY_DOCLING.md  advanced_rag_strategies.md  markdown_cleanup.md  phase1_test_results.md
docs/examples/: api.gravitycar.com.htaccess
docs/implementation_notes/: ADAPTIVE_FILTERING.md  chromacloud_migration.md  flash_api_rate_limiting_implementation.md  logging_and_error_handling.md  query_must_filtering_progress.md  query_must_templates.md
docs/setup/: chromadb_setup.md  (+1 more)
gravitycar_dnd1st_rag_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: benchmark_models.py  deploy_to_production.sh  embed_to_chromacloud.sh  list_chromadb_collections.py  setup_docling.sh  setup_venv.sh  start_chroma.sh  start_dnd_rag.sh  start_flask.sh  stop_dnd_rag.sh  stop_flask.sh  test_flask_query.sh  test_php_proxy.sh  upload_to_chromacloud.py
src/: __init__.py  api.py  cli.py
tests/: integration_test_flask.py  test_config_helpers.py  test_context_extractor.py  test_cost_tracker.py  test_data_models.py  test_embedder_orchestrator.py  test_file_writer.py  test_markdown_file_reader.py  test_monster_book_embedder.py  test_monster_encyclopedia_chunker.py  test_openai_transformer.py  test_query_must_filter.py  test_rate_limiter.py  test_recursive_chunker.py  test_rule_book_embedder.py  test_table_list_parser.py  test_table_preprocessor.py  test_table_replacer.py  test_table_transformer.py  test_token_validator.py
(+91 files in other folders)
