[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gravitycar-dnd1st-rag-system"
version = "1.0.0"
description = "RAG system for Advanced Dungeons & Dragons 1st Edition rulebooks"
readme = "README.md"
authors = [
    {name = "GravityCar", email = "contact@gravitycar.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.1.1",
    "openai>=1.0.0",
    "sentence-transformers>=2.0.0",
    "docling>=2.55.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
dnd-convert = "gravitycar_dnd1st_rag_system.cli:convert_main"
dnd-chunk = "gravitycar_dnd1st_rag_system.cli:chunk_main"
dnd-embed = "gravitycar_dnd1st_rag_system.cli:embed_main"
dnd-truncate = "gravitycar_dnd1st_rag_system.cli:truncate_main"
dnd-query = "gravitycar_dnd1st_rag_system.cli:query_main"
dnd-list = "gravitycar_dnd1st_rag_system.cli:list_main"
dnd-rag = "gravitycar_dnd1st_rag_system.cli:main"

[project.urls]
Homepage = "https://github.com/gravitycar/gravitycar_dnd1st_rag_system"
Repository = "https://github.com/gravitycar/gravitycar_dnd1st_rag_system"
Documentation = "https://github.com/gravitycar/gravitycar_dnd1st_rag_system/docs"

[tool.setuptools]
packages = ["gravitycar_dnd1st_rag_system"]

[tool.setuptools.package-dir]
gravitycar_dnd1st_rag_system = "src"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true